@@ -329,7 +329,9 @@ EXP_MOVING_AVERAGE = Exponentially Weighted Moving Average
 OBV = OBV
 RSI = RSI
 STANDARD_DEVIATION = Standard Deviation
-POINTANDFIGURE = Point and Figure
+POINT_AND_FIGURE = Point and Figure
+BAR_CHART = Bar Chart
+CANDLE_STICK = Candle Stick
 
 GRAPH_CONSTANTS = Graph Constants
 
